fixed header css being too close to input

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,7 +24,7 @@
     border: none;
     border-radius: 20px;
     padding: 0px 10px;
-    width: 45%;
+    width: 40%;
     height: 4vh;
     font-size: 1rem;
 }
@@ -38,7 +38,8 @@
     #hidden-mobile{
         display: none;
     }
-    .header-container {
-      justify-content:space-evenly
+    #input {
+      margin: -60px;
     }
+
 }
